[tool.poetry]
name = "covid-viz"
version = "0.1.0"
description = "Data Visualization of the Covid Pandemic"
authors = ["Tim Valencony"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.38.0"
plotly = "^5.24.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
